--- a/testimonials.html
+++ b/testimonials.html
@@ -90,9 +90,9 @@
                                         <nav role="navigation" class="navbar-menu w-nav-menu">
                                             <div class="navbar-menu-inside">
                                                 <a href="/" class="navbar-link w-nav-link">Home</a>
-                                                <a href="/about" class="navbar-link w-nav-link">About</a>
-                                                <a href="/services" class="navbar-link w-nav-link">Services</a>
-                                                <a href="/testimonials" class="navbar-link w-nav-link">Testimonials</a>
+                                                <a href="about" class="navbar-link w-nav-link">About</a>
+                                                <a href="services" class="navbar-link w-nav-link">Services</a>
+                                                <a href="testimonials" class="navbar-link w-nav-link">Testimonials</a>
                                                 <!-- <a href="/contact" class="navbar-link w-nav-link">Contact</a> -->
                                                 <!-- <a href="/login" class="navbar-link hide-desktop w-nav-link">Login</a> -->
                                                 <a href="contact" class="button navbar-button hide-desktop w-button">Book a Call</a>
@@ -257,9 +257,9 @@
                                         <div id="w-node-f0fa3338-e174-7858-5f88-9069a25483ad-a25483a1" class="footer-column">
                                             <div class="footer-column-heading">Company</div>
                                             <a href="/" aria-current="page" class="footer-link w--current">Home</a>
-                                            <a href="/about" class="footer-link">About</a>
-                                            <a href="/services" class="footer-link">Services</a>
-                                            <a href="/testimonials" class="footer-link">Testimonials</a>
+                                            <a href="about" class="footer-link">About</a>
+                                            <a href="services" class="footer-link">Services</a>
+                                            <a href="testimonials" class="footer-link">Testimonials</a>
                                             <a href="/contact" class="footer-link">Contact</a>
                                             <!-- <a href="/blog" class="footer-link">Blog</a> -->
                                             <!-- <a href="/careers" class="footer-link">Careers</a> -->
