Added Case Study

--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,9 @@
 <html data-wf-domain="" data-wf-page="63787459a77f8c14f7b0dfa1" data-wf-site="63787459a77f8c1ad0b0df9e" data-wf-status="1">
     <head>
         <meta charset="utf-8"/>
-        <title>AURA Agency - About</title>
+        <title>KWAIK Agency - About</title>
         <!-- <meta content="Sense is an easy to use webflow template for your startup. Sense features a clean and modern design, with ample space for showcasing your products or services, as well as highlighting your team, mission, and vision." name="description"/> -->
-        <meta content="AURA Agency - About" property="og:title"/>
+        <meta content="KWAIK Agency - About" property="og:title"/>
         <!-- <meta content="Sense is an easy to use webflow template for your startup. Sense features a clean and modern design, with ample space for showcasing your products or services, as well as highlighting your team, mission, and vision." property="og:description"/> -->
         <!-- <meta content="https://assets.website-files.com/63787459a77f8c1ad0b0df9e/6399c20dc27c3d68da88ddb9_Frame%20134-min.jpg" property="og:image"/> -->
         <!-- <meta content="Home | Sense - Webflow HTML Website Template" property="twitter:title"/> -->
@@ -85,7 +85,7 @@
                                 <div class="padding-vertical padding-small">
                                     <div class="navbar-main">
                                         <a href="/" aria-current="page" class="navbar-logo w-nav-brand w--current">
-                                            <img src="assets/logo.png" loading="lazy" alt="" style="width: 75px; height: 20px;" class="navbar-logo-image"/>
+                                            <img src="assets/logo.png" loading="lazy" alt=""  class="navbar-logo-image"/>
                                         </a>
                                         <nav role="navigation" class="navbar-menu w-nav-menu">
                                             <div class="navbar-menu-inside">
@@ -93,6 +93,7 @@
                                                 <a href="about" class="navbar-link w-nav-link">About</a>
                                                 <a href="services" class="navbar-link w-nav-link">Services</a>
                                                 <a href="testimonials" class="navbar-link w-nav-link">Testimonials</a>
+                                                <a href="case-study" class="navbar-link w-nav-link">Case Study</a>
                                                 <!-- <a href="contact" class="navbar-link w-nav-link">Contact</a> -->
                                                 <!-- <a href="/login" class="navbar-link hide-desktop w-nav-link">Login</a> -->
                                                 <a href="contact" class="button navbar-button hide-desktop w-button">Book a Call</a>
@@ -124,7 +125,7 @@
                                             </div>
                                         </div>
                                         <div style="opacity:0;-webkit-transform:translate3d(0, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="animation-load-3">
-                                            <div>AURA is a dedicated online marketing agency, focused on maximizing your solar company's online growth potential and creating the perfect marketing strategy for your brand with the help of top-notch marketing professionals.</div>
+                                            <div>KWAIK is a dedicated online marketing agency, focused on maximizing your solar company's online growth potential and creating the perfect marketing strategy for your brand with the help of top-notch marketing professionals.</div>
                                         </div>
                                     </div>
                                     <div id="w-node-c9053b85-b2c3-86d4-272e-0759f61d883d-f7b0dfa1" style="opacity:0;-webkit-transform:translate3d(0, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="animation-load-4">
@@ -147,7 +148,7 @@
                                     <div class="cta-main-div">
                                         <div class="cta-main-inside" id="schedule">
                                             <div class="margin-bottom margin-medium">
-                                                <h2>What are you waiting for? <br>Start scaling your business with AURA.</h2>
+                                                <h2>What are you waiting for? <br>Start scaling your business with KWAIK.</h2>
                                             </div>
                                             <div class="margin-bottom margin-large">
                                                 <div>Schedule a call with us to get started</div>
@@ -173,7 +174,7 @@
                                         <a href="/" aria-current="page" class="footer-logo w-inline-block w--current">
                                             <img src="assets/logo.png" loading="lazy" alt="" class="footer-logo-image"/>
                                         </a>
-                                        <div>AURA is a dedicated online marketing agency, focused on maximizing your solar company's online growth potential and creating the perfect marketing strategy for your brand with the help of top-notch marketing professionals.</div>
+                                        <div>KWAIK is a dedicated online marketing agency, focused on maximizing your solar company's online growth potential and creating the perfect marketing strategy for your brand with the help of top-notch marketing professionals.</div>
                                     </div>
                                     <div class="footer-columns-container">
                                         <div id="w-node-f0fa3338-e174-7858-5f88-9069a25483ad-a25483a1" class="footer-column">
@@ -205,7 +206,7 @@
                                 </div>
                                 <div class="footer-down">
                                     <div class="footer-copyright-text">
-                                        Copyright © 2023 AURA Agency
+                                        Copyright © 2023 KWAIK Agency
                                     </div>
                                     <div class="social-links-container">
                                         <a href="https://www.facebook.com/" target="_blank" class="social-link-item w-inline-block">
