--- a/services.html
+++ b/services.html
@@ -68,7 +68,7 @@
                     <div class="container-large">
                         <div class="padding-vertical padding-small">
                             <div class="navbar-main"><a href="/" class="navbar-logo w-nav-brand" aria-label="home"><img
-                                        src="assets/logo.png" style="width: 75px; height: 20px;"
+                                        src="assets/logo.png" 
                                         loading="lazy" alt="" class="navbar-logo-image"></a>
                                 <nav role="navigation" class="navbar-menu w-nav-menu">
                                     <div class="navbar-menu-inside">
@@ -77,6 +77,7 @@
                                             class="navbar-link w-nav-link w--current">About</a>
                                         <a href="services" class="navbar-link w-nav-link">Services</a>
                                         <a href="testimonials" class="navbar-link w-nav-link">Testimonials</a>
+                                                <a href="case-study" class="navbar-link w-nav-link">Case Study</a>
                                         <a href="contact" class="button navbar-button hide-desktop w-button">Get
                                             started</a>
                                     </div>
