--- a/testimonials.html
+++ b/testimonials.html
@@ -4,9 +4,9 @@
 <html data-wf-domain="" data-wf-page="63787459a77f8c14f7b0dfa1" data-wf-site="63787459a77f8c1ad0b0df9e" data-wf-status="1">
     <head>
         <meta charset="utf-8"/>
-        <title>AURA Agency - About</title>
+        <title>KWAIK Agency - About</title>
         <!-- <meta content="Sense is an easy to use webflow template for your startup. Sense features a clean and modern design, with ample space for showcasing your products or services, as well as highlighting your team, mission, and vision." name="description"/> -->
-        <meta content="AURA Agency - About" property="og:title"/>
+        <meta content="KWAIK Agency - About" property="og:title"/>
         <!-- <meta content="Sense is an easy to use webflow template for your startup. Sense features a clean and modern design, with ample space for showcasing your products or services, as well as highlighting your team, mission, and vision." property="og:description"/> -->
         <!-- <meta content="https://assets.website-files.com/63787459a77f8c1ad0b0df9e/6399c20dc27c3d68da88ddb9_Frame%20134-min.jpg" property="og:image"/> -->
         <!-- <meta content="Home | Sense - Webflow HTML Website Template" property="twitter:title"/> -->
@@ -85,7 +85,7 @@
                                 <div class="padding-vertical padding-small">
                                     <div class="navbar-main">
                                         <a href="/" aria-current="page" class="navbar-logo w-nav-brand w--current">
-                                            <img src="assets/logo.png" loading="lazy" alt="" style="width: 75px; height: 20px;" class="navbar-logo-image"/>
+                                            <img src="assets/logo.png" loading="lazy" alt=""  class="navbar-logo-image"/>
                                         </a>
                                         <nav role="navigation" class="navbar-menu w-nav-menu">
                                             <div class="navbar-menu-inside">
@@ -93,6 +93,7 @@
                                                 <a href="about" class="navbar-link w-nav-link">About</a>
                                                 <a href="services" class="navbar-link w-nav-link">Services</a>
                                                 <a href="testimonials" class="navbar-link w-nav-link">Testimonials</a>
+                                                <a href="case-study" class="navbar-link w-nav-link">Case Study</a>
                                                 <!-- <a href="/contact" class="navbar-link w-nav-link">Contact</a> -->
                                                 <!-- <a href="/login" class="navbar-link hide-desktop w-nav-link">Login</a> -->
                                                 <a href="contact" class="button navbar-button hide-desktop w-button">Book a Call</a>
@@ -139,7 +140,7 @@
                                                 <div class="testimonial-slide-inside">
                                                     <img src="https://assets.website-files.com/63787459a77f8c1ad0b0df9e/637db6beeabf2421e9cd000d_Group%201000004279.png" loading="lazy" alt="" class="testimonial-stars-image"/>
                                                     <div class="margin-bottom margin-large">
-                                                        <div>We have been using AURA for the past few months and have been blown away by the results. Their team of experts provided valuable insights and recommendations that have helped us improve our marketing campaigns. We have seen a significant increase in revenue and would highly recommend AURA to any solar installation business looking to take their marketing to the next level.</div>
+                                                        <div>We have been using KWAIK for the past few months and have been blown away by the results. Their team of experts provided valuable insights and recommendations that have helped us improve our marketing campaigns. We have seen a significant increase in revenue and would highly recommend KWAIK to any solar installation business looking to take their marketing to the next level.</div>
                                                     </div>
                                                     <div class="testimonial-person-wrapper">
                                                         <img src="https://assets.website-files.com/63787459a77f8c1ad0b0df9e/637b654b4f76a7428abe3128_Ellipse%20567.png" loading="lazy" alt="" class="testimonial-person-image"/>
@@ -156,7 +157,7 @@
                                                 <div class="testimonial-slide-inside">
                                                     <img src="https://assets.website-files.com/63787459a77f8c1ad0b0df9e/637db6beeabf2421e9cd000d_Group%201000004279.png" loading="lazy" alt="" class="testimonial-stars-image"/>
                                                     <div class="margin-bottom margin-large">
-                                                        <div>We have been working with AURA for the past few months and have seen a tremendous improvement in our customer satisfaction levels. Their team of experts provided valuable insights and guidance that helped us make important changes to our solar installation processes. We are extremely satisfied with the results and would highly recommend AURA to any solar provider looking to improve their marketing.</div>
+                                                        <div>We have been working with KWAIK for the past few months and have seen a tremendous improvement in our customer satisfaction levels. Their team of experts provided valuable insights and guidance that helped us make important changes to our solar installation processes. We are extremely satisfied with the results and would highly recommend KWAIK to any solar provider looking to improve their marketing.</div>
                                                     </div>
                                                     <div class="testimonial-person-wrapper">
                                                         <img src="https://assets.website-files.com/63787459a77f8c1ad0b0df9e/637b654b4f76a7345fbe3129_Ellipse%20567-2.png" loading="lazy" alt="" class="testimonial-person-image"/>
@@ -173,7 +174,7 @@
                                                 <div class="testimonial-slide-inside">
                                                     <img src="https://assets.website-files.com/63787459a77f8c1ad0b0df9e/637db6beeabf2421e9cd000d_Group%201000004279.png" loading="lazy" alt="" class="testimonial-stars-image"/>
                                                     <div class="margin-bottom margin-large">
-                                                        <div>AURA has been a valuable partner for our solar installation business. Their team of experts provided valuable insights and guidance that helped us improve our SEO. We have seen a significant increase in revenue and would highly recommend AURA to any business looking to take their marketing to the next level.</div>
+                                                        <div>KWAIK has been a valuable partner for our solar installation business. Their team of experts provided valuable insights and guidance that helped us improve our SEO. We have seen a significant increase in revenue and would highly recommend KWAIK to any business looking to take their marketing to the next level.</div>
                                                     </div>
                                                     <div class="testimonial-person-wrapper">
                                                         <img src="https://assets.website-files.com/63787459a77f8c1ad0b0df9e/637b654b22cb9f093e223fa1_Ellipse%20567-1.png" loading="lazy" alt="" class="testimonial-person-image"/>
@@ -190,7 +191,7 @@
                                                 <div class="testimonial-slide-inside">
                                                     <img src="https://assets.website-files.com/63787459a77f8c1ad0b0df9e/637db6beeabf2421e9cd000d_Group%201000004279.png" loading="lazy" alt="" class="testimonial-stars-image"/>
                                                     <div class="margin-bottom margin-large">
-                                                        <div>We were skeptical at first about using a customer satisfaction company, but AURA has proven to be worth every penny. Their team of experts provided valuable guidance and support that has helped us improve our customer experience. We are so grateful for their help and would highly recommend AURA to any business looking to improve their customer satisfaction levels.</div>
+                                                        <div>We were skeptical at first about using a customer satisfaction company, but KWAIK has proven to be worth every penny. Their team of experts provided valuable guidance and support that has helped us improve our customer experience. We are so grateful for their help and would highly recommend KWAIK to any business looking to improve their customer satisfaction levels.</div>
                                                     </div>
                                                     <div class="testimonial-person-wrapper">
                                                         <img src="https://assets.website-files.com/63787459a77f8c1ad0b0df9e/637b654b291e7c6068a0740b_Ellipse%20569-1.png" loading="lazy" alt="" class="testimonial-person-image"/>
@@ -225,7 +226,7 @@
                                     <div class="cta-main-div">
                                         <div class="cta-main-inside" id="schedule">
                                             <div class="margin-bottom margin-medium">
-                                                <h2>What are you waiting for? <br>Start scaling your business with AURA.</h2>
+                                                <h2>What are you waiting for? <br>Start scaling your business with KWAIK.</h2>
                                             </div>
                                             <div class="margin-bottom margin-large">
                                                 <div>Schedule a call with us to get started</div>
@@ -251,7 +252,7 @@
                                         <a href="/" aria-current="page" class="footer-logo w-inline-block w--current">
                                             <img src="assets/logo.png" loading="lazy" alt="" class="footer-logo-image"/>
                                         </a>
-                                        <div>AURA is a dedicated online marketing agency, focused on maximizing your solar company's online growth potential and creating the perfect marketing strategy for your brand with the help of top-notch marketing professionals.</div>
+                                        <div>KWAIK is a dedicated online marketing agency, focused on maximizing your solar company's online growth potential and creating the perfect marketing strategy for your brand with the help of top-notch marketing professionals.</div>
                                     </div>
                                     <div class="footer-columns-container">
                                         <div id="w-node-f0fa3338-e174-7858-5f88-9069a25483ad-a25483a1" class="footer-column">
@@ -283,7 +284,7 @@
                                 </div>
                                 <div class="footer-down">
                                     <div class="footer-copyright-text">
-                                        Copyright © 2023 AURA Agency
+                                        Copyright © 2023 KWAIK Agency
                                     </div>
                                     <div class="social-links-container">
                                         <a href="https://www.facebook.com/" target="_blank" class="social-link-item w-inline-block">
