Case Study link

--- a/about.html
+++ b/about.html
@@ -93,6 +93,7 @@
                                                 <a href="about" class="navbar-link w-nav-link">About</a>
                                                 <a href="services" class="navbar-link w-nav-link">Services</a>
                                                 <a href="testimonials" class="navbar-link w-nav-link">Testimonials</a>
+                                                <a href="case-study" class="navbar-link w-nav-link">Case Study</a>
                                                 <!-- <a href="contact" class="navbar-link w-nav-link">Contact</a> -->
                                                 <!-- <a href="/login" class="navbar-link hide-desktop w-nav-link">Login</a> -->
                                                 <a href="contact" class="button navbar-button hide-desktop w-button">Book a Call</a>
