--- a/arclight/about.html
+++ b/arclight/about.html
@@ -77,7 +77,7 @@
                                     <div class="margin-bottom margin-medium">
                                         <div style="opacity:0;-webkit-transform:translate3d(0, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)"
                                             class="animation-load-2">
-                                            <h1>Take your marketing and lead gen to the next level</h1>
+                                            <h1>Customer Acquisition Reinvented</h1>
                                         </div>
                                     </div>
                                     <div class="max-width-medium">
